# adventofcode-2024

./: Cargo.toml  profile.json  typos.toml
src/: lib.rs  matrix.rs  util.rs
