[package]
name = "adventofcode2024"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.33.2"
regex = "1.11.1"


[[bin]]
name = "day1"

[[bin]]
name = "day2"

[[bin]]
name = "day3"

[[bin]]
name = "day4"

[default-run]
name = "day1"

[[bin]]
name = "day5"

[profile.samply]
inherits = "release"
debug = true
